tests/machine/x/cpp/outer_join.error
/tmp/TestCPPCompiler_VMValid_Goldenouter_join4056951133/001/prog.cpp:16:12: error: ‘o’ was not declared in this scope
   16 |   decltype(o) order;
      |            ^
/tmp/TestCPPCompiler_VMValid_Goldenouter_join4056951133/001/prog.cpp:16:12: error: ‘o’ was not declared in this scope
/tmp/TestCPPCompiler_VMValid_Goldenouter_join4056951133/001/prog.cpp:17:12: error: ‘c’ was not declared in this scope
   17 |   decltype(c) customer;
      |            ^
/tmp/TestCPPCompiler_VMValid_Goldenouter_join4056951133/001/prog.cpp:17:12: error: ‘c’ was not declared in this scope
/tmp/TestCPPCompiler_VMValid_Goldenouter_join4056951133/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_VMValid_Goldenouter_join4056951133/001/prog.cpp:34:36: error: cannot convert ‘Order’ to ‘int’ in initialization
   34 |           __items.push_back(Result{o, c});
      |                                    ^
      |                                    |
      |                                    Order
/tmp/TestCPPCompiler_VMValid_Goldenouter_join4056951133/001/prog.cpp:38:36: error: cannot convert ‘Order’ to ‘int’ in initialization
   38 |           __items.push_back(Result{o, c});
      |                                    ^
      |                                    |
      |                                    Order
/tmp/TestCPPCompiler_VMValid_Goldenouter_join4056951133/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_VMValid_Goldenouter_join4056951133/001/prog.cpp:51:34: error: request for member ‘id’ in ‘row.Result::order’, which is of non-class type ‘int’
   51 |           std::cout << row.order.id;
      |                                  ^~
/tmp/TestCPPCompiler_VMValid_Goldenouter_join4056951133/001/prog.cpp:55:37: error: request for member ‘name’ in ‘row.Result::customer’, which is of non-class type ‘int’
   55 |           std::cout << row.customer.name;
      |                                     ^~~~
/tmp/TestCPPCompiler_VMValid_Goldenouter_join4056951133/001/prog.cpp:59:34: error: request for member ‘total’ in ‘row.Result::order’, which is of non-class type ‘int’
   59 |           std::cout << row.order.total;
      |                                  ^~~~~
/tmp/TestCPPCompiler_VMValid_Goldenouter_join4056951133/001/prog.cpp:66:34: error: request for member ‘id’ in ‘row.Result::order’, which is of non-class type ‘int’
   66 |           std::cout << row.order.id;
      |                                  ^~
/tmp/TestCPPCompiler_VMValid_Goldenouter_join4056951133/001/prog.cpp:74:34: error: request for member ‘total’ in ‘row.Result::order’, which is of non-class type ‘int’
   74 |           std::cout << row.order.total;
      |                                  ^~~~~
/tmp/TestCPPCompiler_VMValid_Goldenouter_join4056951133/001/prog.cpp:82:35: error: request for member ‘name’ in ‘row.Result::customer’, which is of non-class type ‘int’
   82 |         std::cout << row.customer.name;
      |                                   ^~~~
